--- a/src/components/contentbox.css
+++ b/src/components/contentbox.css
@@ -12,9 +12,10 @@
     width: 50px;
     height: 50px;
     border-radius: 10px;
-    border-style: solid;
-    border-color: #7b7b7b;
-    border-width: 1px;
+    background-color: #fff;
+    /* border-style: solid;
+    border-color: #bbbbbb;
+    border-width: 1px; */
 }
 
 .contentbox-image-filler {
