--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,7 @@ html {
   font-family: "Roboto", "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 13pt;
   height: 100%;
+  background-color: #eee;
 }
 
 body {
@@ -19,7 +20,7 @@ body {
   height: 100%;
   padding: 0px;
   margin: 0px;
-  background: rgb(255, 255, 255);
+  background: #f8f8f8;
   color: rgb(58, 58, 58); 
 }
 
@@ -87,6 +88,7 @@ a.nav-link-active {
 }
 
 .main {
+  width: 100%;
   margin-top: 20px;
   display: flex;
   flex-direction: column;
@@ -105,7 +107,7 @@ a.nav-link-active {
 
 .main-container {
   display: flex;
-  max-width: 70%;
+  width: 70%;
   flex-direction: column;
   align-items: left;
 }
