--- a/src/pages/frequent.css
+++ b/src/pages/frequent.css
@@ -1,4 +1,28 @@
-.map {
+.heading {
+    text-align: center;
+}
+
+.maps-container {
+    display: flex;
     width: 100%;
-    padding-bottom: 100%;
-  }
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+.map-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+
+.small-map {
+    width: 300px;
+    height: 300px;
+    /* background-color: #666; */
+}
