--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -12,6 +12,16 @@ body {
   margin: 0px;
 }
 
+a {
+  color: rgb(100, 100, 100);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -44,7 +54,6 @@ body {
 .nav-name {
   margin-top: 25px;
   font-size: 18pt;
-  color: rgb(42, 51, 120);
   text-decoration: none;
   font-weight: bold;
 }
@@ -61,12 +70,13 @@ body {
   display: flex;
 }
 
-a.nav-link {
+.nav-link {
   color: rgb(58, 58, 58); 
-  text-decoration: underline;
+  font-weight: normal;
+  text-decoration: none;
 }
 
-a.nav-link-active {
+.nav-link-active {
   color: rgb(58, 58, 58); 
   text-decoration: none;
   font-weight: bold;
@@ -94,15 +104,7 @@ a.nav-link-active {
   flex-direction: column;
   align-items: center;
   line-height: 1.4;
-
-}
-
-.main a {
-  color: rgb(100, 100, 100);
-}
-
-.main a:hover {
-  color: rgb(150, 150, 150);
+  margin-bottom: 20px;
 }
 
 .main-container {
